<?xml version="1.0"?>
<package format="3">
  <name>hri_safety_core</name>
  <version>0.0.0</version>
  <description>Minimal ROS2 nodes for instruction pipeline.</description>
  <maintainer email="TODO">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
